# exchange-api

./: .env  .gitignore  Dockerfile  deploy.yml  docker-compose.yaml  inventory.ini  manage.py  pyproject.toml  tz.txt
.github/workflows/: docker-image.yml
clients/: models.py  serializers.py  urls.py  views.py
clients/migrations/: 0001_initial.py
common/: authentication.py  get_exchange_rate.py  permissions.py
currencies/: admin.py  models.py  serializers.py  views.py
currencies/migrations/: 0001_initial.py
data_entries/: admin.py  apps.py  models.py  urls.py  views.py
data_entries/migrations/: 0001_initial.py  0002_alter_dataentry_cross_rate.py  0003_remove_dataentry_date_dataentry_date_created_and_more.py  0004_rename_amount_dataentry_amount_in_and_more.py
exchange_django/: asgi.py  settings.py  urls.py  wsgi.py
reports/: serializers.py  urls.py  views.py
templates/swaggerui/: swaggerui.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_telegram_id.py  0003_remove_user_client_user_date_added_user_email_and_more.py
